<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#F4F2F2"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:onClick="onBack"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Edit Data Diri"
                android:textColor="#2C2E43"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardBackgroundColor="#fcfcfc"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputName"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    >
                    <EditText
                        android:id="@+id/editTextName"
                        style="@style/modifiedEditText"
                        android:hint="Name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="#2C2E43"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/editTextEmail"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="#2C2E43"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputMobile"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/editTextGender"
                        android:inputType="text"
                        style="@style/modifiedEditText"
                        android:hint="Gender"
                        android:maxLines="1"
                        android:textColor="#2C2E43"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPhone"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/editTextPhone"
                        android:inputType="phone"
                        style="@style/modifiedEditText"
                        android:hint="@string/phone_hint"
                        android:maxLines="1"
                        android:textColor="#2C2E43"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputProvinsi"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/editTextProvinsi"
                        android:inputType="number"
                        style="@style/modifiedEditText"
                        android:hint="@string/provinsi"
                        android:maxLines="1"
                        android:textColor="#2C2E43"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputKab"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/editTextKab"
                        android:inputType="number"
                        style="@style/modifiedEditText"
                        android:hint="@string/kabupaten"
                        android:maxLines="1"
                        android:textColor="#2C2E43"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputKecamatan"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/editTextKecamatan"
                        android:inputType="number"
                        style="@style/modifiedEditText"
                        android:hint="@string/kecamatan"
                        android:maxLines="1"
                        android:textColor="#2C2E43"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputAlamat"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/editTextAlamat"
                        style="@style/modifiedEditText"
                        android:hint="@string/alamat"
                        android:maxLines="1"
                        android:textColor="#2C2E43"/>
                </com.google.android.material.textfield.TextInputLayout>
                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:id="@+id/cirRegisterButton"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Simpan"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>